fixed header and footer spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,6 +54,8 @@ body {
   color: $black;
   opacity: 1;
   margin: 0;
+  overflow-x: hidden;
+
   @include transition (1s opacity);
 
   @media (min-width: $m-bp) {
@@ -99,6 +101,13 @@ body {
     font-weight: $font-weight-light;
     line-height: 1.5;
     font-size: $font-size-regular;
+  }
+
+  video, img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    max-width: 100%;
   }
 }
 
@@ -159,6 +168,15 @@ header {
 footer {
   background-color: $black;
   color: $white;
+
+  &.full-width {
+      width: 100vw;
+      position: relative;
+      left: 50%;
+      right: 50%;
+      margin-left: -50vw;
+      margin-right: -50vw;
+  }
 
   a {
     text-decoration: none;
